--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="renderer" content="webkit"><title>水电站巡视检查管理系统</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>通勤车安全乘坐公众平台</title>
 
     <link rel="stylesheet" type="text/css" href="/static/pkg/all.css" />
 </head>
-<body >
-<div id="app" class="wrap" >
-    <c-nav view="{{currentView}}" stations="{{base.stationList}}" ></c-nav>
-    <div class="admin" style="overflow-y: auto;overflow-x: hidden"><div   v-component="{{currentView}}" keep-alive></div>
+<body>
+    <div id="app" class="wrap" >
+        <div v-component="{{currentView}}" keep-alive></div>
     </div>
-
-    <c-loading show="{{loading}}"></c-loading>
-    <c-progress show="{{progress}}"></c-progress>
-</div>
 
 <script type="text/javascript" src="/static/js/mod.js"></script>
 <script type="text/javascript">/*resourcemap*/
@@ -26,198 +20,119 @@ require.resourceMap({
       "url": "/static/component_modules/vue.js",
       "type": "js"
     },
-    "foot/foot": {
-      "url": "/static/components/component/foot/foot.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js"
-      ]
+    "main/check": {
+      "url": "/static/components/component/main/check.js",
+      "type": "js"
     },
     "main/service": {
       "url": "/static/components/component/main/service.js",
       "type": "js"
     },
-    "filter/filter": {
-      "url": "/static/components/component/filter/filter.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js"
-      ]
-    },
-    "components/page/home/home": {
-      "url": "/static/components/page/home/home.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js",
-        "main/service.js",
-        "filter/filter.js"
-      ]
-    },
-    "pager/pager": {
-      "url": "/static/components/component/pager/pager.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js"
-      ]
-    },
-    "components/page/marker/marker": {
-      "url": "/static/components/page/marker/marker.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js"
-      ]
-    },
-    "main/check": {
-      "url": "/static/components/component/main/check.js",
+    "component_modules/layer.m": {
+      "url": "/static/component_modules/layer.m.js",
       "type": "js"
     },
-    "components/page/project/project": {
-      "url": "/static/components/page/project/project.js",
+    "components/page/bind/bind": {
+      "url": "/static/components/page/bind/bind.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
+        "main/check.js",
         "main/service.js",
-        "filter/filter.js",
-        "main/check.js"
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/target/target": {
-      "url": "/static/components/page/target/target.js",
+    "navbar/navbar": {
+      "url": "/static/components/component/navbar/navbar.js",
       "type": "js",
       "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "main/service.js",
-        "filter/filter.js"
+        "component_modules/vue.js"
       ]
     },
-    "components/page/record/record": {
-      "url": "/static/components/page/record/record.js",
+    "components/page/order/order": {
+      "url": "/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
+        "navbar/navbar.js",
         "main/service.js",
-        "filter/filter.js"
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/record/detail/detail": {
-      "url": "/static/components/page/record/detail/detail.js",
+    "components/page/order/orderdetail/orderdetail": {
+      "url": "/static/components/page/order/orderdetail/orderdetail.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
+        "navbar/navbar.js",
         "main/service.js",
-        "filter/filter.js"
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/task/task": {
-      "url": "/static/components/page/task/task.js",
+    "components/page/history/history": {
+      "url": "/static/components/page/history/history.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "filter/filter.js",
-        "main/service.js"
-      ]
-    },
-    "components/page/query/query": {
-      "url": "/static/components/page/query/query.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
         "main/service.js",
-        "filter/filter.js"
+        "component_modules/layer.m.js"
       ]
     },
     "component_modules/director": {
       "url": "/static/component_modules/director.js",
       "type": "js"
     },
-    "components/page/route/route": {
-      "url": "/static/components/page/route/route.js",
+    "components/page/approve/approve": {
+      "url": "/static/components/page/approve/approve.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "main/service.js",
-        "filter/filter.js",
-        "component_modules/director.js"
+        "navbar/navbar.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
-    "components/page/record/add/add": {
-      "url": "/static/components/page/record/add/add.js",
+    "components/page/approve/approvemore/approvemore": {
+      "url": "/static/components/page/approve/approvemore/approvemore.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "main/service.js",
-        "filter/filter.js"
+        "navbar/navbar.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
-    "components/page/route/object/object": {
-      "url": "/static/components/page/route/object/object.js",
+    "components/page/search/search": {
+      "url": "/static/components/page/search/search.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "main/service.js",
-        "filter/filter.js"
+        "navbar/navbar.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
-    "components/page/type/type": {
-      "url": "/static/components/page/type/type.js",
+    "components/page/search/result/result": {
+      "url": "/static/components/page/search/result/result.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
         "main/service.js",
-        "filter/filter.js"
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/section/section": {
-      "url": "/static/components/page/section/section.js",
+    "components/page/validate/validate": {
+      "url": "/static/components/page/validate/validate.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
+        "navbar/navbar.js",
         "main/service.js",
-        "filter/filter.js"
-      ]
-    },
-    "components/page/position/position": {
-      "url": "/static/components/page/position/position.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js",
-        "pager/pager.js",
-        "main/service.js",
-        "filter/filter.js"
-      ]
-    },
-    "components/page/base/base": {
-      "url": "/static/components/page/base/base.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "foot/foot.js"
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/config/config": {
@@ -225,40 +140,96 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js"
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/defect/defect": {
-      "url": "/static/components/page/defect/defect.js",
+    "components/page/whither/whither": {
+      "url": "/static/components/page/whither/whither.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "foot/foot.js"
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
-    "components/page/login/login": {
-      "url": "/static/components/page/login/login.js",
+    "components/page/calendar/calendar": {
+      "url": "/static/components/page/calendar/calendar.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
         "main/service.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
+      ]
+    },
+    "components/page/relation/relation": {
+      "url": "/static/components/page/relation/relation.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
+      ]
+    },
+    "components/page/relation/query/query": {
+      "url": "/static/components/page/relation/query/query.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js",
         "component_modules/director.js"
       ]
     },
-    "loading/loading": {
-      "url": "/static/components/component/loading/loading.js",
+    "components/page/relation/relatives/relatives": {
+      "url": "/static/components/page/relation/relatives/relatives.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "main/check.js"
+      ]
+    },
+    "components/page/company/company": {
+      "url": "/static/components/page/company/company.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
+      ]
+    },
+    "component_modules/iscroll-zoom": {
+      "url": "/static/component_modules/iscroll-zoom.js",
+      "type": "js"
+    },
+    "components/page/bus/bus": {
+      "url": "/static/components/page/bus/bus.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "main/service.js",
+        "component_modules/layer.m.js",
+        "component_modules/iscroll-zoom.js",
+        "component_modules/director.js"
+      ]
+    },
+    "components/page/home/home": {
+      "url": "/static/components/page/home/home.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js"
       ]
     },
-    "nav/nav": {
-      "url": "/static/components/component/nav/nav.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue.js",
-        "main/service.js"
-      ]
+    "component_modules/fastclick": {
+      "url": "/static/component_modules/fastclick.js",
+      "type": "js"
     },
     "main/main": {
       "url": "/static/components/component/main/main.js",
@@ -266,21 +237,18 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "component_modules/director.js",
-        "components/page/login/login.js",
+        "components/page/home/home.js",
         "main/service.js",
-        "loading/loading.js",
-        "nav/nav.js"
+        "component_modules/fastclick.js"
       ]
     }
   },
   "pkg": {}
 });</script>
 <script type="text/javascript" src="/static/component_modules/jquery.min.js"></script>
-<script type="text/javascript" src="/static/js/ajaxfileupload.js"></script>
-<script type="text/javascript" src="/static/js/respond.js"></script>
-<script type="text/javascript" src="/static/js/bootstrap.js"></script>
-<script type="text/javascript" src="/static/js/zTree_v3/js/jquery.ztree.all-3.5.min.js"></script>
-<script type="text/javascript" src="/static/js/laydate.js"></script>
+<script type="text/javascript" src="/static/js/mui.js"></script>
+<script type="text/javascript" src="/static/js/mui.indexedlist.js"></script>
+<script type="text/javascript" src="/static/js/mui.picker.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
